<?xml version="1.0"?>
<package format="2">
  <name>robotis_engineer_action_module_msgs</name>
  <version>0.1.1</version>
  <description>
    This package includes ROS messages and services for the action moudle package.
  </description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="jhshim@robotis.com">Ryan Shim</maintainer>
  <url type="repository">https://github.com/rjshim/robotis_engineer_msgs</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
