<?xml version="1.0"?>
<package format="2">
  <name>robotis_engineer_msgs</name>
  <version>1.0.0</version>
  <description>The robotis_engineer_msgs package</description>
  <license>Apache 2.0</license>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="jhshim@robotis.com">Ryan Shim</maintainer>
  <url type="repository">https://github.com/rjshim/robotis_engineer_msgs</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robotis_engineer_action_module_msgs</exec_depend>
  <exec_depend>robotis_engineer_walking_module_msgs</exec_depend>
  <export><metapackage/></export>
</package>
