<?xml version="1.0"?>
<package format="2">
  <name>robotis_engineer_online_walking_module_msgs</name>
  <version>1.0.0</version>
  <description>The robotis_engineer_online_walking_module_msgs package</description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="jhshim@robotis.com">Ryan Shim</maintainer>
  <url type="repository">https://github.com/rjshim/robotis_engineer_msgs</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
