<?xml version="1.0"?>
<package format="2">
  <name>robotis_max_msgs</name>
  <version>0.0.0</version>
  <description>The robotis_max_msgs package</description>
  <license>Apache 2.0</license>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="jhshim@robotis.com">Ryan Shim</maintainer>
  <url type="repository">https://github.com/RyanJaehyunShim/robotis_max_msgs</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robotis_max_action_module_msgs</exec_depend>
  <exec_depend>robotis_max_walking_module_msgs</exec_depend>
  <exec_depend>robotis_max_online_walking_module_msgs</exec_depend>
  <export><metapackage/></export>
</package>
